// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<WithTranslationContextComponent
  translations={null}
>
  <NewPassword
    error={null}
    footer={null}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "changePassword": "Change password",
        "newPassword": "New password",
        "repeatNewPassword": "Repeat new password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="newPassword"
            isLabelVisible={true}
            label="New password"
            placeholder={null}
            required={true}
            type="password"
          >
            <div
              className="root"
            >
              <label
                htmlFor="newPassword"
              >
                <div
                  className="isLabelRequired"
                >
                  New password
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="newPassword"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="password"
                />
              </label>
            </div>
          </TextField>
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="newPasswordRepeat"
            isLabelVisible={true}
            label="Repeat new password"
            placeholder={null}
            required={true}
            type="password"
          >
            <div
              className="root"
            >
              <label
                htmlFor="newPasswordRepeat"
              >
                <div
                  className="isLabelRequired"
                >
                  Repeat new password
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="newPasswordRepeat"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="password"
                />
              </label>
            </div>
          </TextField>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Change password"
            labelVisibility="all"
            loading={false}
            priority="primary"
            size="medium"
            type="submit"
            variant="default"
          >
            <button
              className="root
                    priorityPrimary
                    sizeMedium
                    
                    
                    block"
              disabled={false}
              onClick={null}
              title="Change password"
              type="submit"
            >
              <span>
                Change password
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </NewPassword>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with all props except translations 1`] = `
<WithTranslationContextComponent
  error="Error message"
  footer={
    <a
      href="http://example.com"
    >
      link
    </a>
  }
  logo="http://satyr.io/100x100/33?text=logo"
  title="Company"
  translations={null}
>
  <NewPassword
    error="Error message"
    footer={
      <a
        href="http://example.com"
      >
        link
      </a>
    }
    logo="http://satyr.io/100x100/33?text=logo"
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title="Company"
    translations={
      Object {
        "changePassword": "Change password",
        "newPassword": "New password",
        "repeatNewPassword": "Repeat new password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="title"
      >
        Company
      </div>
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="error"
          >
            Error message
          </div>
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="newPassword"
            isLabelVisible={true}
            label="New password"
            placeholder={null}
            required={true}
            type="password"
          >
            <div
              className="root"
            >
              <label
                htmlFor="newPassword"
              >
                <div
                  className="isLabelRequired"
                >
                  New password
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="newPassword"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="password"
                />
              </label>
            </div>
          </TextField>
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="newPasswordRepeat"
            isLabelVisible={true}
            label="Repeat new password"
            placeholder={null}
            required={true}
            type="password"
          >
            <div
              className="root"
            >
              <label
                htmlFor="newPasswordRepeat"
              >
                <div
                  className="isLabelRequired"
                >
                  Repeat new password
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="newPasswordRepeat"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="password"
                />
              </label>
            </div>
          </TextField>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Change password"
            labelVisibility="all"
            loading={false}
            priority="primary"
            size="medium"
            type="submit"
            variant="default"
          >
            <button
              className="root
                    priorityPrimary
                    sizeMedium
                    
                    
                    block"
              disabled={false}
              onClick={null}
              title="Change password"
              type="submit"
            >
              <span>
                Change password
              </span>
            </button>
          </Button>
        </form>
        <div
          className="footer"
        >
          <a
            href="http://example.com"
          >
            link
          </a>
        </div>
      </div>
    </div>
  </NewPassword>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with translations 1`] = `
<WithTranslationContextComponent
  translations={
    Object {
      "changePassword": "Změnit heslo",
      "newPassword": "Nové heslo",
      "repeatNewPassword": "Nové heslo znovu",
    }
  }
>
  <NewPassword
    error={null}
    footer={null}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "changePassword": "Změnit heslo",
        "newPassword": "Nové heslo",
        "repeatNewPassword": "Nové heslo znovu",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="newPassword"
            isLabelVisible={true}
            label="Nové heslo"
            placeholder={null}
            required={true}
            type="password"
          >
            <div
              className="root"
            >
              <label
                htmlFor="newPassword"
              >
                <div
                  className="isLabelRequired"
                >
                  Nové heslo
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="newPassword"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="password"
                />
              </label>
            </div>
          </TextField>
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="newPasswordRepeat"
            isLabelVisible={true}
            label="Nové heslo znovu"
            placeholder={null}
            required={true}
            type="password"
          >
            <div
              className="root"
            >
              <label
                htmlFor="newPasswordRepeat"
              >
                <div
                  className="isLabelRequired"
                >
                  Nové heslo znovu
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="newPasswordRepeat"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="password"
                />
              </label>
            </div>
          </TextField>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Změnit heslo"
            labelVisibility="all"
            loading={false}
            priority="primary"
            size="medium"
            type="submit"
            variant="default"
          >
            <button
              className="root
                    priorityPrimary
                    sizeMedium
                    
                    
                    block"
              disabled={false}
              onClick={null}
              title="Změnit heslo"
              type="submit"
            >
              <span>
                Změnit heslo
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </NewPassword>
</WithTranslationContextComponent>
`;
